@@ -7,6 +7,8 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
   * DecorationsMenuLayout: use input monitor for menu scrubbing (LP:
     #1614597)
   * PanelView: use InputMonitor to track menu events
+  * LockScreenPanel: use InputMonitor events instead of mouse polling
+    for menu scrubbing
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
